04/exercise2/ingress-resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-resources
    namespace: odoo
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
      nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
     paths:
     - path: /()(.*)
       pathType: Prefix
       backend:
         service:
           name: odoo
           port:
             number: 80
